# emerald

./: .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  config.example.toml  config.toml  foundry.toml
.github/workflows/: lint.yml  malaketh.yml  test.yml
.testnet/config/0/: config.toml
.testnet/config/1/: config.toml
.testnet/config/2/: config.toml
.testnet/config/3/: config.toml
app/: Cargo.toml
app/src/: app.rs  main.rs  node.rs  state.rs  store.rs  sync_handler.rs
cli/src/: args.rs  config.rs  new.rs
cli/src/cmd/: distributed_testnet.rs
contracts/: Cargo.toml  build.rs
contracts/src/: lib.rs  validator_manager.rs
crates/core/: Cargo.toml
crates/core/src/: execution_layer.rs  lib.rs
docs/architecture/: adr-0000-template.md  adr-0001-decouple-consensus-from-execution.md
docs/operational-docs/: Dockerfile  README.md  book.toml  compose.yml  dockerfile  mkdocs.yaml
docs/operational-docs/docs/: index.md
docs/operational-docs/src/: SUMMARY.md  architecture.md  introduction.md  production-network.md
engine/src/: engine.rs  engine_rpc.rs  json_structures.rs
scripts/: add_peers.sh  generate_testnet_config.sh  spawn.bash  test_access_control.sh
solidity/src/: ValidatorManager.sol  ValidatorManagerProxy.sol
solidity/test/: ValidatorManager.t.sol  ValidatorManagerUpgrade.t.sol  ValidatorManagerV2.sol
specs/: emerald.qnt  emerald_tests.qnt
tests/mbt/src/: driver.rs  lib.rs
tests/mbt/tests/: mbt.rs
types/: Cargo.toml
types/src/signing/: bls12381.rs
utils/: Cargo.toml
utils/src/: genesis.rs
(+15 files in other folders)
